<resources>

    <string name="app_name">Tag To Do</string>
    <string name="Name">Name</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Logo">Logo</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="New_user_create_account">New User? Create Account</string>
    <string name="already_signed_in_login_here">Already signed in? Login here</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_start_page">start_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_note_listing_page">note_listing_page</string>
    <string name="add_note">Add Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_details">Note Details</string>
    <string name="email_verify">Email not verified</string>
    <string name="verify">VERIFY NOW</string>
    <string name="profile">View Profile</string>
    <string name="logout">LOG OUT</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome">Welcome User</string>
    <string name="profilePic">Profile Picture</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_adderss">Your Email Adderss</string>
    <string name="phone_number">Phone Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="home">Home</string>
    <string name="title_desc">Your handy notebook !</string>
    <string name="general">General</string>
    <string name="support">Support</string>
    <string name="notes">Notes</string>
    <string name="sync_notes">Sync Notes</string>
    <string name="contact_us">Contact us</string>
    <string name="share_app">Share App</string>
    <string name="close">Close</string>
    <string name="open">open</string>
    <string name="settings">Settings</string>
    <string name="textview">Textview</string>
    <string name="title_activity_note_detaiils">NoteDetaiils</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_note">AddNote</string>
    <string name="untitled">Untitled</string>
    <string name="write_your_note_here">Write your note here</string>
    <string name="login_as_guest_user">Login as Guest</string>
    <string name="guest_tagtodo_com">guest@tagtodo.com</string>
    <string name="guest">Guest</string>

    <!--    Strings used for map activity-->
    <string name="access_token">pk.eyJ1IjoiYWRpdHlhNDMwIiwiYSI6ImNrOHB1c3VmcjAyaXczbm55ajRzeDBldGkifQ.FpIV1irwej--hJX9uSyWGA</string>
    <string name="my_loc">MY_LOC</string>
    <string name="current_location">"Current location: "</string>
    <string name="user_location_permission_explanation">Explain</string>
    <string name="user_location_permission_not_granted">Permission denied</string>
    <string name="select_location">SELECT LOCATION</string>
    <string name="cancel">CANCEL</string>
    <string name="no_results">Sorry, no results found</string>
    <string name="confirm">CONFIRM</string>
    <string name="add_location">Add Location</string>
    <string name="add_alarm">Add alarm</string>
    <string name="location">Location</string>
    <string name="add_note_image">Add Note Image</string>
    <string name="alarm">Alarm</string>
    <string name="location_service">Location Service</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>


    <integer name="distance">100</integer>

</resources>
