<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".note.NoteDetails"
    tools:showIn="@layout/activity_note_details"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/NoteDetailsImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/add_note_image"
                android:longClickable="false"
                android:maxWidth="250dp"
                android:maxHeight="250dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/noteDetailsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:isScrollContainer="true"
                android:padding="18dp"
                android:scrollbars="vertical"
                android:text="@string/textview"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="15dp"
                android:layout_below="@id/NoteDetailsImage" />

            <TextView
                android:id="@+id/locationDetails_noteDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/location"
                android:textColor="@color/text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteDetailsContent"
                android:drawableStart="@drawable/ic_pin_drop_black_24dp"
                android:visibility="invisible"
                android:layout_below="@id/noteDetailsContent"/>

            <TextView
                android:id="@+id/alarmDetails_noteDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/locationDetails_noteDetails"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_alarm_on_black_24dp"
                android:text="@string/alarm"
                android:drawablePadding="5dp"
                android:textColor="@color/text"
                android:visibility="invisible" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>