<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorPrimary">


    <ProgressBar
        android:id="@+id/progressBar_addNote"
        style="@style/MyProgressBarRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/addNoteImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/add_note_image"
                android:longClickable="false"
                android:maxWidth="250dp"
                android:maxHeight="250dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/addNoteContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@android:color/transparent"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/write_your_note_here"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:selectAllOnFocus="false"
                android:textColor="@color/text"
                android:textColorHighlight="@color/textHint"
                android:textColorHint="@color/textHint"
                android:textCursorDrawable="@drawable/black_cursor"
                android:layout_below="@id/addNoteImage"/>

            <TextView
                android:id="@+id/locationDetails_addNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addNoteContent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_pin_drop_black_24dp"
                android:text="@string/location"
                android:textColor="@color/text"
                android:visibility="invisible" />
            <TextView
                android:id="@+id/alarmDetails_addNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/locationDetails_addNote"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_alarm_on_black_24dp"
                android:text="@string/alarm"
                android:drawablePadding="5dp"
                android:textColor="@color/text"
                android:visibility="invisible" />

        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
