<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:background="@color/colorPrimaryDark">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/textDark"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="218dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="false"
            android:background="@color/textDark"
            android:contentDescription="@string/profilePic"
            android:cropToPadding="true"
            android:foregroundGravity="center_horizontal"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/tagtodo_logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/welcome_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/aldrich"
        android:gravity="center_horizontal"
        android:text="User Profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/vertical_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardProfile"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/vertical_list"
        android:layout_width="411dp"
        android:layout_height="167dp"
        android:layout_marginBottom="129dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_prof">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:padding="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <TextView
                android:id="@+id/name_prof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/arya"
                android:gravity="center_horizontal|center_vertical"
                android:padding="5dp"
                android:text="@string/your_name"
                android:textColor="@color/textHint"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:padding="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <TextView
                android:id="@+id/email_prof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/arya"
                android:gravity="center_horizontal|center_vertical"
                android:padding="5dp"
                android:text="@string/your_email_adderss"
                android:textColor="@color/textHint"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <TextView
                android:id="@+id/phone_prof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/arya"
                android:gravity="center_horizontal|center_vertical"
                android:padding="5dp"
                android:text="@string/phone_number"
                android:textColor="@color/textHint"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <TextView
        android:id="@+id/verify_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_verify"
        app:layout_constraintTop_toBottomOf="@+id/vertical_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="@color/textHint"
        android:textSize="20sp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/resend_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/ic_launcher_background"
        android:text="@string/verify"
        app:layout_constraintTop_toBottomOf="@+id/verify_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="399dp"
        android:layout_height="79dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/resetPasswd_prof"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="@color/textDark"
            android:textSize="14sp" />

        <Button
            android:id="@+id/mainMenu"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="@color/textDark"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>